--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "skylark-jquery": "git+https://github.com/skylark-integration/skylark-jquery.git#master",
     "skylark-langx": "git+https://github.com/skylarklangx/skylark-langx.git#master",
-    "skylark-utils-dom": "git+https://github.com/skylarkutils/skylark-utils-dom.git#master",
-    "skylark-jquery": "git+https://github.com/skylark-integration/skylark-jquery.git#master"
+    "skylark-utils-dom": "git+https://github.com/skylarkutils/skylark-utils-dom.git#master"
   },
   "skylarkjs": {
     "build": {
